--- a/V1/css/reset.css
+++ b/V1/css/reset.css
@@ -134,7 +134,6 @@ a:focus{text-decoration: none}
   padding: 0px 16px 19px 16px;
   margin-bottom: 46px;
   border-bottom: 6px solid ;
-/* border-color: transparent; */
   border-color: rgba(0,0,0,0);
   transition: all 0.2s linear;
   transition: all 0.2s linear;
@@ -154,10 +153,7 @@ a:focus{text-decoration: none}
     background-position: center center;
 }
 .game_match_ul li:hover{
-    /* background-image: url("../images/game_tab1.png"); */
     justify-content: center;
-    /* background-repeat: no-repeat;
-      background-position: center center; */
 }
 .game_match_top{
     display: flex;
@@ -165,7 +161,6 @@ a:focus{text-decoration: none}
     padding-top: 10px;
 }
 .game_match_bottom {
-    /* padding: 0px 20px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -183,8 +178,11 @@ a:focus{text-decoration: none}
     font-size: 16px;
     color: #999;
     word-wrap: break-word;
-  word-break: normal;
-  max-width: 45%;
+    word-break: normal;
+    max-width: 45%;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap
   /*  */
 }
 .game_match_bottom .left{
@@ -266,7 +264,6 @@ a:focus{text-decoration: none}
     background: #FFFFFF;
     margin: 0 auto; 
     text-align: center;
-    /* line-height: 45px; */
     font-size: 24px;
     font-weight: 500;
     color: #FE7A00;
@@ -275,3 +272,66 @@ a:focus{text-decoration: none}
     justify-content: space-between;
 }
 /* 热门战队 */
+
+
+@media only screen and (max-width: 1024px){
+    /* 右面移动端 */
+    .game_right{
+    float: none;
+    width: 100%;
+}
+    .game_lately, .game_news, .game_team, .game_player{
+        width: 100%;
+        height: auto;
+        padding-bottom: 20px;
+    }
+    .game_match_top span{
+        font-size: 24px;
+    }
+    .game_right .title span{
+        font-size: 30px;
+    }
+    .game_match_img{
+        width: 90px;
+        height: 90px;
+    }
+    .game_team .game_team_list_detail .a1{
+        width: 108px;
+        height: 70px;
+    }
+    .game_team .game_team_list_detail li{
+        height: auto;
+    }
+    .game_right .game_team{
+        height: auto;
+    }
+    .game_team .game_team_list_detail li span{
+        height: 54px;
+        line-height: 54px;
+        padding: 0 20px;
+        font-size: 24px;
+    }
+    .game_news li{
+        width: 100%;
+        height: 81px;
+        line-height: 80px;
+        border-bottom: 1px solid #eee;
+    }
+    .game_news li a{
+        font-size: 24px;
+    }
+    .game_right .game_match_ul li{
+        height: auto;
+    }
+    .game_right .game_match_ul .left span{
+        font-size: 24px;
+        max-width: 180px;
+    }
+    .game_player_ul li span{
+        font-size: 24px;
+        padding: 0 20px;
+    }
+    .game_team_depiction p{
+        font-size: 24px;
+    }
+}
