--- a/V1/css/index.css
+++ b/V1/css/index.css
@@ -7,7 +7,7 @@
 }
   .banner{
       width: 100%;
-      height: 488px;
+      /* height: 488px; */
       position: relative;
       padding-top: 19%;
   }
@@ -81,93 +81,7 @@
       width: 10px;
       height: 18px;
   }
-  .game_match_ul{
-      min-height: 304px;
-      display: flex;
-      flex-wrap: wrap;
-  }
-  .bg1{
-    background: url("../images/bg_1.png") no-repeat right bottom;
-  }
-  .game_match_ul li{
-    padding: 0px 16px 19px 16px;
-    margin-bottom: 46px;
-    border-bottom: 6px solid ;
- /* border-color: transparent; */
-    border-color: rgba(0,0,0,0);
-    transition: all 0.2s linear;
-    transition: all 0.2s linear;
-  }
-  
-  .game_match_ul li:hover{
-      box-shadow: 0px 16px 40px 0px rgba(51, 51, 51, 0.14);
-      border-radius: 4px;
-      border-bottom: 6px solid #ff6649;
-      transform: translateY(0px);
-  }
-  .game_match_ul li:hover a{
-      display: block;
-      color: #333;
-      background-image: url("../images/game_tab1.png");
-      background-repeat: no-repeat;
-      background-position: center center;
-  }
-  .game_match_ul li:hover{
-      /* background-image: url("../images/game_tab1.png"); */
-      justify-content: center;
-      /* background-repeat: no-repeat;
-	    background-position: center center; */
-  }
-  .game_match_top{
-      display: flex;
-      justify-content: space-between;
-      padding-top: 10px;
-  }
-  .game_match_bottom {
-      /* padding: 0px 20px; */
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-  }
-  .game_match_img{
-      width: 54px;
-      height: 54px;
-  }
-  .game_match_img img{
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-  }
-  .game_match_top span{
-      font-size: 16px;
-      color: #999;
-      word-wrap: break-word;
-    word-break: normal;
-    max-width: 45%;
-    overflow:hidden;
-    text-overflow:ellipsis;
-    white-space: nowrap
-    /*  */
-  }
-  .game_match_bottom .left{
-      display: flex;
-    float: left;
-    font-size: 14px;
-    font-weight: 900;
-    flex-direction: column;
-    align-items: center;
-    /* width: 33%; */
-    padding-top: 15px;
-  }
-  .game_match_bottom .ov_1 span{
-      max-width: 98px;
-      overflow:hidden;
-      text-overflow:ellipsis;
-      white-space: nowrap;
-  }
-  .game_match_bottom .center{
-      padding:0 8px;
-  }
+
   /* .game_match_bottom .left span{
     word-wrap: break-word;
     word-break: normal;
@@ -210,6 +124,79 @@
 }
 .game_team_e{
     margin-bottom: 18px;
+}
+.game_team_list_detail{
+    display: flex;
+    flex-wrap: wrap;
+}
+.game_team_list_detail .a1{
+    width: 124px;
+    height: 114px;
+}
+.game_team_list_detail .a1 img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+.game_team_list_detail li{
+    width: 128px;
+    height: 182px;
+    display: flex;
+    margin-right: 36px;
+    /* border:2px solid;
+    border-color: rgba(0,0,0,0); */
+    border-radius: 8px;
+    transition: all 0.2s linear;
+    margin-bottom: 10px;
+    padding: 2px;
+}
+.game_team_list_detail li:nth-child(7n){
+    margin-right: 0;
+}
+.game_team_list_detail li .a1{
+    padding:14px 12px 0 12px;
+}
+.game_team_list_detail li a{
+    /* display: flex;
+    flex-direction: column; */
+    border-radius: 8px;
+    width: 100%;
+    /* justify-content: space-between; */
+}
+.game_team_list_detail li span{
+    width: 100%;
+    height: 48px;
+    /* line-height: 48px; */
+    text-align: center;
+    font-weight: 500;
+    display: block;
+    color:#333;
+    /* transition: all 0.2s linear; */
+} 
+.game_team_list_detail li:hover span{
+    background: linear-gradient(90deg, #FAC569, #FF6551);
+    color: #fff;
+    line-height: 48px;
+}
+
+.game_team_list_detail li:hover{
+    box-sizing: border-box;
+    background: linear-gradient(90deg, #FAC569, #FF6551);
+    transform: translateY(0px);
+
+}
+.game_team_list_detail li:hover a{
+    border-radius: 8px;
+    background: #FFFFFF;
+    margin: 0 auto; 
+    text-align: center;
+    line-height: 45px;
+    font-size: 24px;
+    font-weight: 500;
+    color: #FE7A00;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .game_fenlei{
     display: flex;
