--- a/V1/css/reset.css
+++ b/V1/css/reset.css
@@ -109,6 +109,11 @@ a:focus{text-decoration: none}
     padding-left:0;
 } */
 
+.imgauto{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
 @media (min-width: 1200px){
     .container {
         width: 1200px;
