--- a/V1/css/game.css
+++ b/V1/css/game.css
@@ -1259,7 +1259,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 .game_detail_item6{
     padding-top: 6px;
 }
-.game_detail_item7{
+.match_pre{
     background: #F5F6F7;
     padding-top: 20px;
 }
