--- a/V1/css/game3.css
+++ b/V1/css/game3.css
@@ -425,7 +425,7 @@
 }
 .game3_team2_vs_top{
     width: 108px;
-    height: 50;
+    height: 50px;
     background: url("../images/game3_vs.png");
     background-position: 0 18px;
     background-repeat: no-repeat;
