--- a/V1/css/teamdetail.css
+++ b/V1/css/teamdetail.css
@@ -99,16 +99,16 @@
     background-position: 99% bottom;
 }
 /* 头部开始 */
-.team_member_top,team_data_top{
+.team_member_top{
     margin-bottom: 22px;
 }
-.team_member_img,.team_data_img{
+.team_member_img,.team_data_img,.team_honor_img{
     width: 24px;
     height: 24px;
     margin-right: 8px;
     font-size: 0;
 }
-.team_member_top .team_number_name,.team_data_top .team_data_name{
+.team_member_top .team_number_name,.team_data_top .team_data_name,.team_honor_name{
     font-size: 24px;
     color: #333;
     height: 24px;
@@ -185,22 +185,217 @@
 }
 /* 圆形进度条 */
 .circle {
-    width: 208px;
-    height: 208px;
-    background: #FFF9F7;
-    /* margin: 6px 6px 20px; */
     display: inline-block;
     position: relative;
     text-align: center;
     line-height: 1.2;
     border-radius: 50%;;
 }
+.red_explain,.blue_explain{
+    display: inline-block;
+}
+.red_explain span,.blue_explain span{
+    display: block;
+}
+.won_all{
+    background: #FFF9F7;
+    width: 208px;
+    height: 208px;
+    margin-right: 30px;
+}
 .circle strong {
     position: absolute;
-    top: 30px;
+    top: 90px;
     left: 0;
     width: 100%;
     text-align: center;
     line-height: 40px;
     font-size: 30px;
+}
+.won_all strong {
+    font-weight: 400;
+    color: #FF6649;
+    font-family: shuzi;
+}
+.won_all strong span{
+    display: block;
+    font-family: time;
+    font-size: 20px;
+    color: #333;
+}
+.team_data_items{
+    padding-top: 24px;
+}
+.red_explain .rate_number,.blue_explain .rate_number{
+    font-size: 30px;
+    line-height: 30px;
+    height: 30px;
+    color: #FF5C6A;
+    font-family: shuzi;
+    margin-bottom: 15px;
+}
+.blue_explain .rate_number{
+    color: #0C8DFC;
+}
+.rate_explain{
+    font-size: 18px;
+    height: 18px;
+    line-height: 18px;
+    color: #333;
+    margin-bottom: 8px;
+}
+.rate{
+    font-size: 18px;
+    height: 18px;
+    line-height: 18px;
+    color: #999;
+}
+.won_red{
+    margin-bottom: 10px;
+}
+.data_right{
+    width: 620px;
+}
+.data_btn_all{
+    width: 300px;
+    height: 94px;
+    background: #0C8DFC;
+    border-radius: 47px;
+    margin-right: 20px;
+    text-align: center;
+    line-height: 94px;
+}
+.data_btn_all span{
+    display: block;
+}
+.data_btn_all span:nth-child(1){
+    font-size: 60px;
+    font-family: shuzi;
+    color: #fff;
+    height: 60px;
+    line-height: 60px;
+}
+.data_btn_all span:nth-child(2){
+    font-size: 20px;
+    font-family: shuzi;
+    color: #fff;
+    height: 20px;
+    line-height: 20px;
+}
+.data_btn{
+    width: 300px;
+    height: 94px;
+    background: #FFFFFF;
+    border: 2px solid #0C8DFC;
+    border-radius: 47px;
+    text-align: center;
+    padding-top: 10px;
+}
+.data_death{
+    margin-right: 20px;
+}
+.data_btn p:nth-child(1){
+    font-size: 24px;
+    color: #333;
+    height: 24px;
+    line-height: 24px;
+    margin-bottom: 8px;
+}
+.data_btn p:nth-child(2){
+    font-size: 16px;
+    color: #333;
+    height: 16px;
+    line-height: 16px;
+    margin-bottom: 8px;
+}
+.data_btn p:nth-child(3){
+    font-size: 16px;
+    color: #999;
+    height: 16px;
+    line-height: 16px;
+}
+.data_btn p:nth-child(3) span{
+    color: #0C8DFC;
+}
+.team_honor_top{
+    margin-bottom: 30px;
+}
+.team_honor{
+    width: 1200px;
+    height: 302px;
+    background: #FFFFFF;
+    border: 1px solid #EEEEEE;
+    border-radius: 8px;
+    padding: 20px 20px 20px 18px;
+}
+.honor_top{
+    margin-bottom: 16px;
+}
+.honor_top span{
+    float: left;
+    width: 25%;
+    text-align: left;
+    font-size: 20px;
+    color: #333;
+}
+.honor_top span:nth-last-child(1){
+    text-align: right;
+}
+.w25{
+    width: 25%;
+    float: left;
+    display: flex;
+    align-items: center;
+}
+.honor_bottom_img1{
+    width: 24px;
+    height: 24px;
+}
+.honor_bottom_img2{
+    width: 30px;
+    height: 30px;
+}
+.honor_bottom_vs{
+    display: flex;
+}
+.w25 span,.w25{
+    font-size: 18px;
+    color: #333;
+}
+li a .w25:nth-child(2n) .honor_bottom_img1{
+    margin-right: 10px;
+}
+li a .w25:nth-child(3n) .honor_bottom_img2{
+    margin-right: 12px;
+}
+.honor_bottom_vs{
+    display: flex;
+    align-items: center;
+}
+.honor_bottom_vs span{
+    font-size: 30px;
+    font-family: shuzi;
+}
+.span_left{
+    margin-left: 30px;
+    margin-right: 22px;
+}
+.honor_bottom_vs span.red{
+    color: #FF5C6A;
+}
+.span_right{
+    margin-left: 22px;
+    margin-right: 30px;
+}
+.honor_bottom_vs span.blue{
+    color: #0C8DFC;
+}
+.honor_bottom_vs .honor_bottom_img1{
+    margin-right: 0;
+}
+li a .w25:nth-child(2n) span,li a .w25:nth-child(3n) span{
+    width: 150px;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap
 }
