--- a/V1/css/team.css
+++ b/V1/css/team.css
@@ -4,7 +4,7 @@
 }
 .header{
     background: #FFFFFF;
-    /* box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08); */
+    box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     margin-bottom: 30px;
 }
 .game_left
@@ -32,7 +32,7 @@
     background: #FFFFFF;
     border: 1px solid #EEEEEE;
     border-radius: 8px;
-    /* display: none; */
+    display: none;
 }
 .esports_item.active{
     display: block;
@@ -89,31 +89,9 @@
     line-height: 32px;
     margin-right: 4px;
 }
-.paging .paging_num.active{
-    background: #FF6649;
-    color: #fff;
-}
 .esport_more{
     margin-right: 10px;
     margin-left: 6px;
-}
-/* 改成锚点链接新增 */
-.esports_ul {
-    position: fixed;
-    top: 88px;
-    z-index: 22;
-    background-color: #fff;
-    width: 860px;
-}
-.esports_detail{
-    padding-top: 148px;
-}
-.header{
-    margin-bottom: 0;
-    position: fixed;
-    /* left: 0; */
-    top: 0;
-    z-index: 22;
 }
 @media only screen and (max-width: 1024px){
     .esports_item{
