--- a/V1/css/game3.css
+++ b/V1/css/game3.css
@@ -324,6 +324,9 @@
     background: #FF6649;
     top:11px;
 }
+.game3_classify2{
+    padding-left: 20px;
+}
 .game3_classify2_detail{
     padding: 0 16px 0 10px;
     height: 38px;
