--- a/V1/css/reset.css
+++ b/V1/css/reset.css
@@ -282,7 +282,16 @@ a:focus{text-decoration: none}
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    align-items: center;
     padding: 30px;
+}
+.null img{
+    margin-bottom: 10px;
+}
+.null span{
+    font-size: 18px;
+    color: #999;
 }
 /* 分页 */
 .paging{
