--- a/V1/css/right.css
+++ b/V1/css/right.css
@@ -149,6 +149,52 @@
     text-overflow:ellipsis;
     white-space: nowrap
 }
+/* 最新赛事 */
+.game_match{
+    width: 320px;
+    height: 569px;
+    background: #FFFFFF;
+    border: 1px solid #EEEEEE;
+    border-radius: 8px;
+    padding: 18px 20px 10px 20px;
+    margin-bottom: 18px;
+}
+.game_match_detail li{
+    width: 280px;
+    height: 158px;
+    margin-bottom: 10px;
+}
+.game_match .title{
+    margin-bottom: 18px;
+}
+.game_match_detail li a {
+    display: block;
+    width: 275px;
+    height: 158px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+}
+.game_match_detail li a span {
+    display: block;
+    font-size: 20px;
+    color: #eee;
+    font-weight: 500;
+    text-align: center;
+    height: 50px;
+    line-height: 50px;
+    width: 100%;
+    padding: 0 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    background-color: rgba(0,0,0,.5);
+    position: absolute;
+    left: 0;
+    bottom: 0;
+}
+/* 最新赛事 */
 
 @media only screen and (max-width: 1024px){
     /* 右面移动端 */
@@ -210,4 +256,22 @@
     .game_team_depiction p{
         font-size: 24px;
     }
+    /* 最新赛事 */
+    .game_match{
+        width: 100%;
+        height: auto;
+        padding: .3rem;
+    }
+    .game_match_detail{
+        display: flex;
+        justify-content: space-between;
+    }
+    .game_match_detail li{
+        width: 32%;
+    }
+    .game_match_detail li a{
+        width: 100%;
+        height: 1.58rem;
+    }
+    /* 最新赛事 */
 }
