--- a/V1/css/404.css
+++ b/V1/css/404.css
@@ -1,190 +1,135 @@
-html,
-body{
-    margin: 0px;
-    overflow: hidden;
+
+
+
+.team_member{
+
 }
-
-.dwo{
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    height: 100%;
-    width: 100%;
-    margin: 0px;
-    background: radial-gradient(circle, #240015 0%, #12000b 100%);
-    overflow: hidden;
+.team_member_detail li{
+    float: left;
 }
-
-.wrap{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+.header{
+    height: 88px;
+    background: #FFFFFF;
+    box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
+    margin-bottom: 40px;
 }
-
-h2{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: 50px;
-    font-size: 32px;
-    text-transform: uppercase;
-    transform: translate(-50%, -50%);
-    display: block;
-    color: #12000a;
-    font-weight: 300;
-    font-family: Audiowide;
-    text-shadow: 0px 0px 4px #12000a;
-    animation: fadeInText 3s ease-in 3.5s forwards, flicker4 5s linear 7.5s infinite, hueRotate 6s ease-in-out 3s infinite;
+.wrapper{
+    background: #F5F6F7;
 }
-
-.dwo-home{
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    margin-top: 100px;
-    font-size: 32px;
-    text-transform: uppercase;
-    transform: translate(-50%, -50%);
-    display: block;
-    color: #12000a;
-    font-weight: 300;
-    font-family: Audiowide;
-    text-shadow: 0px 0px 4px #12000a;
-    animation: fadeInText 3s ease-in 3.5s forwards, flicker4 5s linear 7.5s infinite, hueRotate 6s ease-in-out 3s infinite;
-}
-
-
-#svgWrap_1,
-#svgWrap_2{
-    position: absolute;
+.hot_team{
     height: auto;
-    width: 600px;
-    max-width: 100%;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
-
-#svgWrap_1,
-#svgWrap_2{
-    animation: hueRotate 6s ease-in-out 3s infinite;
+.team_pub_top,.team_member_top{
+    background: #fff;
+    padding: 20px 0 30px 18px;
 }
-
-#id1_1,
-#id2_1,
-#id3_1{
-    stroke: #ff005d;
-    stroke-width: 3px;
-    fill: transparent;
-    filter: url(#glow);
+.game_team_list_detail{
+    background: #fff;
 }
-
-#id1_2,
-#id2_2,
-#id3_2{
-    stroke: #12000a;
-    stroke-width: 3px;
-    fill: transparent;
-    filter: url(#glow);
+.hot_team{
+    background-color: rgba(0,0,0,0);
+    padding: 0;
+    padding-right: 10px;
+    border-right: 0;
+    border-right: 8px;
 }
-
-#id3_1{
-    stroke-dasharray: 940px;
-    stroke-dashoffset: -940px;
-    animation: drawLine3 2.5s ease-in-out 0s forwards, flicker3 4s linear 4s infinite;
+.mb20{
+    margin-bottom: 20px;
 }
-
-#id2_1{
-    stroke-dasharray: 735px;
-    stroke-dashoffset: -735px;
-    animation: drawLine2 2.5s ease-in-out 0.5s forwards, flicker2 4s linear 4.5s infinite;
+.team_pub_img{
+    margin-right: 10px;
 }
-
-#id1_1{
-    stroke-dasharray: 940px;
-    stroke-dashoffset: -940px;
-    animation: drawLine1 2.5s ease-in-out 1s forwards, flicker1 4s linear 5s infinite;
+.game_team_list_detail li{
+    width: 25%;
+    margin-right: 0;
 }
-
-@keyframes drawLine1 {
-    0%  {stroke-dashoffset: -940px;}
-    100%{stroke-dashoffset: 0px;}
+.team_member_detail{
+    background: #fff;
+    padding-bottom: 20px;
 }
-
-@keyframes drawLine2 {
-    0%  {stroke-dashoffset: -735px;}
-    100%{stroke-dashoffset: 0px;}
+.team_member_detail li a{
+    width: 128px;
+    height: 172px;
+    display: block;
+    padding-top: 10px;
 }
-
-@keyframes drawLine3 {
-    0%  {stroke-dashoffset: -940px;}
-    100%{stroke-dashoffset: 0px;}
+.team_number_photo{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 2px solid #ff6649;
+    margin: 0 auto 10px auto;
 }
-
-@keyframes flicker1{
-    0%  {stroke: #ff005d;}
-    1%  {stroke: transparent;}
-    3%  {stroke: transparent;}
-    4%  {stroke: #ff005d;}
-    6%  {stroke: #ff005d;}
-    7%  {stroke: transparent;}
-    13% {stroke: transparent;}
-    14% {stroke: #ff005d;}
-    100%{stroke: #ff005d;}
+.team_number_name{
+    display: block;
+    text-align: center;
+    font-size: 18px;
+    color: #333;
+    font-weight: 400;
 }
-
-@keyframes flicker2{
-    0%  {stroke: #ff005d;}
-    50% {stroke: #ff005d;}
-    51% {stroke: transparent;}
-    61% {stroke: transparent;}
-    62% {stroke: #ff005d;}
-    100%{stroke: #ff005d;}
+.team_news_bot_ul li{
+    margin-right: 20px;
 }
-
-@keyframes flicker3{
-    0%  {stroke: #ff005d;}
-    1%  {stroke: transparent;}
-    10% {stroke: transparent;}
-    11% {stroke: #ff005d;}
-    40% {stroke: #ff005d;}
-    41% {stroke: transparent;}
-    45% {stroke: transparent;}
-    46% {stroke: #ff005d;}
-    100%{stroke: #ff005d;}
+.team_news_bot_ul li:nth-child(2n){
+    margin-right: 0;
 }
-
-@keyframes flicker4{
-    0%  {color: #ff005d;text-shadow:0px 0px 4px #ff005d;}
-    30% {color: #ff005d;text-shadow:0px 0px 4px #ff005d;}
-    31% {color: #12000a;text-shadow:0px 0px 4px #12000a;}
-    32% {color: #ff005d;text-shadow:0px 0px 4px #ff005d;}
-    36% {color: #ff005d;text-shadow:0px 0px 4px #ff005d;}
-    37% {color: #12000a;text-shadow:0px 0px 4px #12000a;}
-    41% {color: #12000a;text-shadow:0px 0px 4px #12000a;}
-    42% {color: #ff005d;text-shadow:0px 0px 4px #ff005d;}
-    85% {color: #ff005d;text-shadow:0px 0px 4px #ff005d;}
-    86% {color: #12000a;text-shadow:0px 0px 4px #12000a;}
-    95% {color: #12000a;text-shadow:0px 0px 4px #12000a;}
-    96% {color: #ff005d;text-shadow:0px 0px 4px #ff005d;}
-    100%{color: #ff005d;text-shadow:0px 0px 4px #ff005d;}
+.team_pub_more{
+    font-size: 20px;
+    color: #999;
 }
-
-@keyframes fadeInText{
-    1%  {color: #12000a;text-shadow:0px 0px 4px #12000a;}
-    70% {color: #ff005d;text-shadow:0px 0px 14px #ff005d;}
-    100%{color: #ff005d;text-shadow:0px 0px 4px #ff005d;}
+.team_news{
+    height: auto;
+    border-bottom: 0;
 }
-
-@keyframes hueRotate{
-    0%  {
-        filter: hue-rotate(0deg);
+.img404{
+    width: 700px;
+    height: 418px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+.img404 img{
+    display: block;
+}
+.not_find{
+    font-size: 18px;
+    color: #333
+}
+.return{
+    font-size: 18px;
+    color: #fff;
+    background: #ff6649;
+    height: 32px;
+    line-height: 32px;
+    padding: 0 20px;
+    border-radius: 16px;
+    margin-left: 10px;
+}
+.div404{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+@media only screen and (max-width: 1024px){
+    .team_member{
+        padding: 0;
     }
-    50%  {
-        filter: hue-rotate(-120deg);
+    .game_team_list_detail li .a1{
+        margin: 0 auto;
     }
-    100%  {
-        filter: hue-rotate(0deg);
+    .team_news_bot_ul li{
+        width: 100%;
+        height: .9rem;
+        line-height: .9rem;
+    }
+    .team_news_bot_ul li a{
+        font-size: .28rem;
+    }
+    .team_pbu_name,.team_number_name{
+        font-size: .32rem;
+    }
+    .team_pub_more{
+        font-size: .28rem;
     }
 }
