--- a/V1/css/teamdetail.css
+++ b/V1/css/teamdetail.css
@@ -287,7 +287,7 @@
 }
 .data_btn_all span:nth-child(2){
     font-size: 20px;
-    font-family: shuzi;
+    /* font-family: shuzi; */
     color: #fff;
     height: 20px;
     line-height: 20px;
@@ -539,37 +539,6 @@ li a .max_span span{
 }
 .team_results_detail li:hover .team_results_see{
     border-color: #FF6649;
-}
-.team_pub_top{
-    margin-bottom: 30px;
-}
-.team_pub_img{
-    width: 24px;
-    height: 24px;
-    margin-right: 8px;
-    font-size: 0;
-}
-.team_pbu_name{
-    font-size: 24px;
-    color: #333;
-    height: 24px;
-    line-height: 24px;
-}
-.team_pub_more span{
-    font-size: 20px;
-    color: #999;
-    line-height: 20px;
-    height: 20px;
-    vertical-align: middle;
-    margin-right: 14px;
-}
-.team_pub_more{
-    font-size: 0;
-}
-.team_pub_more img{
-    width: 10px;
-    height: 18px;
-    vertical-align: middle;
 }
 
 /* 移动 */
