--- a/V1/css/headerfooter.css
+++ b/V1/css/headerfooter.css
@@ -170,7 +170,7 @@ width: 12.5%;
     }
     .nav ul{
         display: flex;
-        flex-direction: column;
+        /* flex-direction: column; */
         transition: all 3s;
         font-size: 22px;
     }
@@ -179,6 +179,7 @@ width: 12.5%;
         text-align: center;
         margin-right: 0;
         border-bottom: 1px solid #363636;
+        width: 100%;
     }
     .header .logo{
         width: 149px;
@@ -209,6 +210,9 @@ width: 12.5%;
         font-size: 26px;
         line-height: 100px;
         color: #fff;
+        display: block;
+        text-align: center;
+        width: 100%;
     }
     .nav li.active a{
         font-size: 30px;
