--- a/V1/css/news.css
+++ b/V1/css/news.css
@@ -175,7 +175,10 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
         width: 100%;
     }
     .have_img{
-        width: 5.4rem;
+        width: 5rem;
+    }
+    .news_title{
+        width: 5rem;
     }
     .news_top_img{
         width: 100%;
