--- a/V1/css/teamdetail.css
+++ b/V1/css/teamdetail.css
@@ -332,7 +332,7 @@
 }
 .team_honor{
     width:100%;
-    height: 302px;
+    /* height: 302px; */
     background: #FFFFFF;
     border: 1px solid #EEEEEE;
     border-radius: 8px;
