--- a/V1/css/playerdetail.css
+++ b/V1/css/playerdetail.css
@@ -375,7 +375,7 @@
 }
 .player_team_explain,.player_xs_explain{
     width: 590px;
-    height: 434px;
+    min-height: 434px;
     background: #FFFFFF;
     border: 1px solid #EEEEEE;
     border-radius: 8px;
