修复了电竞选手中战队介绍的别称溢出隐藏

--- a/V1/css/playerdetail.css
+++ b/V1/css/playerdetail.css
@@ -392,6 +392,10 @@
 .player_team_bot .name{
     font-size: 20px;
     color: #999;
+    max-width: 300px;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap
 }
 .player_team_bot .name span{
     color: #333;
