赛事专题添加tab切换

--- a/V1/css/reset.css
+++ b/V1/css/reset.css
@@ -678,7 +678,7 @@ color: #fff;
     border-radius: 8px;
     padding: 20px 20px 20px 18px;
 }
-.game_team_list_detail{
+.hot_team .game_team_list_detail{
     padding-left: 20px;
 }
 .hot_match{
