--- a/V1/css/events.css
+++ b/V1/css/events.css
@@ -7,12 +7,43 @@
     box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     margin-bottom: 30px;
 }
+.game_left
+.esports_ul li {
+    float: left;
+    height: 40px;
+    line-height: 40px;
+    margin-bottom: 20px;
+    margin-right: 10px;
+}
+.esports_ul a {
+    font-size: 20px;
+    color: #FF6649;
+    padding: 0 20px;
+}
+.esports_ul li.active a {
+    display: block;
+    background: #FF6649;
+    border-radius: 20px;
+    color: #fff;
+}
+.events_ditem{
+    display: none;
+}
+.events_ditem.active{
+    display: block;
+}
 .events{
     width: 860px;
     background: #fff;
     border: 1px solid #eee;
     border-radius: 8px;
     padding: 20px 20px 10px 20px;
+}
+.events_ul{
+    margin-bottom: 30px;
+}
+.events_ditem{
+    padding-bottom: 30px;
 }
 .events_ul li {
     float: left;
