--- a/V1/css/news.css
+++ b/V1/css/news.css
@@ -154,6 +154,16 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     margin-bottom: 20px;
     text-indent: 2em;
 }
+.news_top_content{
+	width:820px;
+}
+.news_top_content img{
+	object-fit:cover;
+	width:100%;
+	height:100%;
+	display:black;
+	margin:20px 0;
+}
 .team_pub_top{
     margin-bottom: 10px;
 }
